List possible signal types to discuss

--- a/docs/background.tex
+++ b/docs/background.tex
@@ -49,7 +49,10 @@ Some lines of test about the figuresSome lines of test about the figuresSome lin
 \end{Figure}
 \begin{multicols}{2}
 \subsection{Evidence of Competition and Signalling in QFA}
-Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
+
+ethanol poisoning
+quorum sensing
+
 
 \subsection{Modelling Approaches}
 
