If we find competition.

--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -150,6 +150,17 @@ identifying competition effects than it does for genetic interactions
 \end{Figure}
 
 
+If the CANS model is not a good fit to the data, we may need to
+improve aspects of our modelling approach (see section
+\ref{sec:dev-mod-further}). Otherwise, if competition or signalling
+effects provide a significantly better fit to the data, we have proved
+our main hypothesis and can move on to comparing experimental designs
+(section \ref{sec:comp-exper-designs}. In order to compare diffusion
+accross agar height we will also need to develop a two-dimensional
+spatially-discretised model of diffusion (section
+\ref{sec:dev-mod-further}. We will also determine the effect on
+different measures of fitness mentioned in section
+\ref{sec:genetic-interaction}(, for both QFA and SGA.)
 \subsection{Develop Model Further}
 \label{sec:dev-mod-further}
 
