--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -108,9 +108,10 @@ possibly allowing it to propagate further.
 \label{sec:analyse-data}
 We have access to unpublished QFA and SGA data for the model organism
 \textit{S. Cerevisiae}. Some data (Figure~\ref{fig:gaps}), with vacant
-gaps, is specifically designed for the study of competition. We will
-analyse data from single plates to avoid having to deal with batch
-variance which can be a major source of error (see
+gaps, is specifically designed for the study of
+competition. ?presumable some with the same variants grown on the
+plate?. We will analyse data from single plates to avoid having to
+deal with batch variance which can be a major source of error (see
 \citet{Baryshnikova2010}). We will at first fit our model to data
 using least squares. The QFA R package (ref) contains functions for
 fitting the independent logistic growth model and there is development
@@ -134,12 +135,13 @@ advantage over an earlier statistical analysis carried out by
 \citet{Addinall2011}. However, \citet{Heydari2016} do identify weakly
 interacting genes for which there is no previous evidence, and a
 hierarchical model which only modelled population dynamics took
-significantly less time (1 week). As we are only studying single plates
-and not going on to infer genetic interaction strength, there will be
-fewer levels in our hierarchy, allowing for a faster computational
-time, and the analysis may provide more significant evidence in
-identifying competition effects than it does for genetic interactions
-(?is this last bit true? ?should we discard this or not?).
+significantly less time (1 week). As we are only studying single
+plates and not going on to infer genetic interaction strength, there
+will be fewer levels in our hierarchy, allowing for a faster
+computational time, and the analysis may provide more significant
+evidence in identifying competition effects than it does for genetic
+interactions (?is this last bit true? ?should we discard this or
+not?).
 
 \begin{Figure}
   \label{fig:gaps}
@@ -150,17 +152,20 @@ identifying competition effects than it does for genetic interactions
 \end{Figure}
 
 
-If the CANS model is not a good fit to the data, we may need to
-improve aspects of our modelling approach (see section
-\ref{sec:dev-mod-further}). Otherwise, if competition or signalling
-effects provide a significantly better fit to the data, we have proved
-our main hypothesis and can move on to comparing experimental designs
-(section \ref{sec:comp-exper-designs}. In order to compare diffusion
-accross agar height we will also need to develop a two-dimensional
+If we fail to discover competition or signalling effects by fitting
+the CANS model, we may need to improve aspects of our modelling
+approach (see section \ref{sec:dev-mod-further}), study different
+data, or consider that the data is not subject to these effects. (The
+latter conclusion would raise questions about other sources of
+variance.) Otherwise, if we find evidence of a significant competition
+and/or signalling effect, we have proved our main hypothesis and can
+move on to comparing experimental designs (section
+\ref{sec:comp-exper-designs}). In order to compare diffusion across
+agar height we will need to develop a two-dimensional
 spatially-discretised model of diffusion (section
-\ref{sec:dev-mod-further}. We will also determine the effect on
-different measures of fitness mentioned in section
-\ref{sec:genetic-interaction}(, for both QFA and SGA.)
+\ref{sec:dev-mod-further}. We will also determine the effect of
+competition on different measures of fitness discussed in section
+\ref{sec:genetic-interaction}.
 \subsection{Develop Model Further}
 \label{sec:dev-mod-further}
 
