Add section label

--- a/docs/background.tex
+++ b/docs/background.tex
@@ -62,6 +62,7 @@ quorum sensing
 \subsubsection{Hierarchical models and Bayesian inference}
 
 \subsection{Inference of Genetic Interactions / Telomere Cap Defects}
+\label{sec:genetic-interaction}
 (Move to background section.
 Motivated by the link between telomere shortening, ageing, and cancer
 (refs?), \citet{Addinall2011} study the genetic interactions of
