Logistic model Verhulst 1845

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -250,3 +250,13 @@ year = 2010
   url = "http://www.scipy.org/",
   note = {[Online; accessed 2016-04-08]}
 }
+
+@article{Verhulst1845,
+author = {Verhulst, P.F.},
+journal = {Nouveaux mémoires de l'Académie Royale des Sciences et Belles-Lettres de Bruxelles},
+pages = {14-54},
+title = {Recherches mathématiques sur la loi d'accroissement de la population.},
+url = {http://eudml.org/doc/182533},
+volume = 18,
+year = 1845,
+}
