--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -145,11 +145,11 @@ interactions (?is this last bit true? ?should we discard this or
 not?).
 
 \begin{Figure}
-  \label{fig:gaps}
   \centering
   \includegraphics[width=\linewidth]{DLR00012647-2009-07-02_23-12-49}
   \captionof{figure}{An agar with locations left empty (``gaps'')
     designed to exhibit effects of competition and signalling.}
+  \label{fig:gaps}
 \end{Figure}
 
 
@@ -164,53 +164,100 @@ move on to comparing experimental designs (section
 \ref{sec:comp-exper-designs}). In order to compare diffusion across
 agar height we will need to develop a two-dimensional
 spatially-discretised model of diffusion (section
-\ref{sec:dev-mod-further}. We will also determine the effect of
-competition on different measures of fitness discussed in section
-\ref{sec:genetic-interaction}. (r and Z)
+\ref{sec:dev-mod-further}.
 
-An initial attempt to model competition for nutrients in terms of
-parameters of the logistic growth model uses a time dependent
+We will also determine the effect of competition on different measures
+of fitness discussed in section \ref{sec:genetic-interaction}. In
+previous studies, which use fits of the (independent) logistic growth
+model (refs), we believe that fitness estimates based on the carrying
+capacity \(Z\) might be more affected by competition and signalling
+than those based on the rate constant \(r\).  To asses this
+possibility, an initial attempt to model competition for nutrients in
+terms of parameters of the logistic growth model uses a time dependent
 carrying capacity,
 \begin{equation}
   \label{eq:5}
-  K_{i}(t) = K_{0,i}\left(\frac{N_{0} + \Delta N_{i}(t)}{N_{0}}\right),
+  Z_{i}(t) = Z_{0,i}\left(\frac{N_{0,i} + \Delta N_{i}(t)}{N_{0,i}}\right),
 \end{equation}
-where \(K_{0}\) is the carrying capacity under the assumption of
-independence and is modified by the ratio of net nutrients available
-to the culture at time \(t\) to the initial amount of nutrients
-available under the assumption of independence. In this model, rate
-constants \(r_{i}\) in \ref{eq:1} are unaffected. \(\Delta N_{i}(t)\),
-the integral of the second term in \ref{eq:3}b, would need to be found
-first, by fitting a nutrient only version of \ref{eq:3}, before being
-used to fit \ref{eq:5}. It would take further work to find exact
-relationships between parameters of \ref{eq:1} and \ref{eq:3}. ?Conor,
-you said you might have done this previously? ?Also, is what I have
-done above sensible?
+where \(Z_{0}\) is the carrying capacity under the assumption of
+independence, and is modified by the ratio of net nutrients available
+at time \(t\) to the initial amount of nutrients available under the
+assumption of independence \(N_{0}\). In this model, rate constants
+\(r_{i}\) in \ref{eq:1} are unchanged. To fit this model to data, we
+would first need to find \(\Delta N_{i}(t)\), the integral of the
+second term in \ref{eq:3}b, by fitting a nutrient only version of
+\ref{eq:3}. It would take further work to find exact relationships
+between parameters of \ref{eq:1} and \ref{eq:3}. ?Conor, you said you
+might have done this previously?  ?Also, is what I have suggested
+above sensible?
 
 
 \subsection{Develop Model Further}
 \label{sec:dev-mod-further}
+If inaccurate consider a different signal for instance. If our first
+approach to modelling signal does not fit the data but we suspect that
+an effect still exists we may try another simple model such as,
+\begin{equation}
+  \label{eq:6}
+  \frac{dC_{i}}{dt} = r_{i}N_{i}C_{i}\left(1 - \frac{S_{i}}{S_{crit}}\right),\\
+\end{equation}
+where \(S_{crit}\) is some critical concentration of signal above
+which cultures will not grow. We must however be careful to avoid
+over-fitting by adding too much complexity to our model when we are
+unsure of the underlying mechanism.
+
+We may also model diffusion more realistically, and incorporate
+interactions between diagonal neighbours, using a
+spatially-discretised model of diffusion with a finer grid (see
+Figure~\ref{fig:grid}). We will begin using a two-dimensional model as
+this is simpler. Validating against data from miniQFA
+(Figure~\ref{fig:stripes}), Figure~\ref{fig:height_dependence}
+(middle) illustrates how we may remain in two-dimensions and
+investigate how diffusion varies across agar height. We shall do this
+for different agar geometries, varying \(d\) and \(w\) in
+Figure~\ref{fig:exp_vars}. If height dependence is found to be
+unimportant, we may apply a two-dimensional grid as in
+Figure~\ref{fig:grid}. Otherwise, we will have to use a three
+dimensional model of diffusion. It may suffice to model nutrient
+diffusion in three-dimensions and signal diffusion in only
+two-dimensions, as nutrients are assumed to be distributed evenly
+throughout the agar at time zero, whereas signal molecules will be
+secreted by cultures at the agar surface as they grow. We could also
+consider using a continuous PDE model of diffusion, although this is
+?likely to take more computational time? and be more difficult to
+implement. Because of the generality of the problem, it is
+possible that computational models of diffusion already exist
+publicly, and we will explore the possibility of using them.
 
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{square_array_grid}
-  \captionof{figure}{Schematic of a spatially-discretized two-dimensional model.}
+  \captionof{figure}{Schematic of a spatially-discretized
+    two-dimensional model.}
+  \label{fig:grid}
 \end{Figure}
 
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{height_dep_miniqfa_delta_z}
   \captionof{figure}{Schematics of diffusion across agar height.}
+  \label{fig:height_dependence}
 \end{Figure}
 % Could model movement of vertical or movement across it.
 \subsection{Compare Experimental Designs}
 \label{sec:comp-exper-designs}
 
+If competition is present, without randomisation of culture location,
+repeated observations may lead to overconfidence in fitness
+estimates. As discussed in (sec), difficulties in measuring growth curves
+for cultures at the agar boundaries would introduce a further
+systematic error.
 
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{qfa_v_sga_vars}
   \captionof{figure}{QFA and SGA agars.}
+  \label{fig:exp_vars}
 \end{Figure}
 
 
@@ -219,10 +266,13 @@ done above sensible?
 
 
 \begin{Figure}
-  \label{stripes}
   \centering
   \includegraphics[width=\linewidth]{K000343_027_001_2015-02-21_19-38-08}
-  \captionof{figure}{A miniQFA agar in which lines of locations (``stripes'') are left uncultured. We can use a similar experimental setup, with uniform cultures in one dimension, to study diffusion across agar height in only two dimensions.}
+  \captionof{figure}{A miniQFA agar in which lines of locations
+    (``stripes'') are left uncultured. We can use a similar
+    experimental setup, with uniform cultures in one dimension, to
+    study diffusion across agar height in only two dimensions.}
+  \label{fig:stripes}
 \end{Figure}
 
 \subsection{Package and Distribute}
