list figs for plan.

--- a/docs/plan.tex
+++ b/docs/plan.tex
@@ -1,7 +1,8 @@
 
 \section{Plan}
 \label{sec:plan}
-
+gantt chart
+flow chart showing cyclical nature of investigation
 
 %%% Local Variables:
 %%% mode: latex
