--- a/docs/background.tex
+++ b/docs/background.tex
@@ -20,8 +20,6 @@
     https://github.com/CnrLwlss/Colonyzer \citep{Lawless2010}}
 \end{Figure}
 
-Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
-Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
 
 \end{multicols}
 \graphicspath{{images_low_res/}}
@@ -58,6 +56,11 @@ quorum sensing
 
 \subsubsection{Mass Action Kinetics}
 \subsubsection{The Logistic Growth Model}
+\cite{Verhulst1845}
+\begin{equation}
+  \label{eq:1}
+  \dot{x} = rx\left(1 - \frac{x}{Z}\right)
+\end{equation}
 \subsubsection{Fishers multiplicative model of genetic interactions}
 \subsubsection{Hierarchical models and Bayesian inference}
 
