--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -40,9 +40,9 @@ ODEs (CANS model):
 where, \(j\) indicates the closest neighbours, \(k_{n}\) and \(k_{s}\)
 are nutrient and signal diffusion constants, \(\alpha\) is the rate of
 secretion of signal, and \(\beta\) is a constant for the effect of
-signal on culture population. ?do we assume no cell death as we can
-detect dead cells on the agar? Alternative models of signalling effect
-could be used, depending on the mechanism of signalling under
+signal on culture population. ?do we assume no cell death\ detect dead
+cells on the agar/ times are short? Alternative models of signalling
+effect could be used, depending on the mechanism of signalling under
 investigation (see background section); initially, we have chosen to
 use the simplest modelling approach. Setting diffusion constants to
 zero reduces \ref{eq:3} to the independence model. We may also study
@@ -306,17 +306,17 @@ because data and machinery already exists for these designs.
 than CSM agars, but these have a higher initial nutrient density
 \(n_{0}\) and this reduces the time available to observe culture
 growth. We could also choose to study this trade-off and see if there
-is any reduction in CANS effects due to there being a shorter time
-for diffusion to occur. ?(A guess) However, we expect that CANS effects would be
-small compared to the error from shorter observation time and that a
-better approach would be to correct for CANS in CMS data either
+is any reduction in CANS effects due to there being a shorter time for
+diffusion to occur. ?However (A guess), we expect that CANS effects
+would be small compared to the error from shorter observation time and
+that a better approach would be to correct for CANS in CMS data either
 directly or using randomisation.?)
 
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{K000343_027_001_2015-02-21_19-38-08}
   \captionof{figure}{A miniQFA agar in which lines of locations
-    (``stripes'') are left uncultured. We can use a similar
+    (``stripes'') are left vacant. We can use a similar
     experimental setup, with uniform cultures in one dimension, to
     study diffusion at different agar heights in only two dimensions.}
   \label{fig:stripes}
