--- a/docs/background.tex
+++ b/docs/background.tex
@@ -6,11 +6,6 @@
 \subsection{A Comparison of Methods for Screening Strain Fitness }
 
 
-% \begin{figure}
-%    \centering
-%    \includegraphics[width=\linewidth]{5658435523_c2e43729f1_b}
-%    \captionof{figure}{An example QFA agar.}
-% \end{figure}
 
 \begin{Figure}
   \centering
@@ -46,7 +41,7 @@
     ??with permission?? from \citet{Lawless2010}.}
 \end{Figure}
 \begin{multicols}{2}
-\subsection{Evidence of Competition and Signalling in QFA}
+\subsection{Competition and Signalling}
 
 ethanol poisoning
 quorum sensing
@@ -56,7 +51,8 @@ quorum sensing
 
 \subsubsection{Mass Action Kinetics}
 \subsubsection{The Logistic Growth Model}
-\cite{Verhulst1845}
+
+The logistic growth model \cite{Verhulst1845} describes
 \begin{equation}
   \label{eq:1}
   \dot{x} = rx\left(1 - \frac{x}{Z}\right)
